- reduced footer height - fixed movie/tv tag not showing

--- a/src/index.css
+++ b/src/index.css
@@ -95,12 +95,13 @@ input {
 .search-results {
   position: sticky;
   top: 0;
-  background: rgb(62, 62, 62);
+  background: #14141400;
   height: 100%;
   max-height: 50vh;
   overflow-y: scroll;
+  backdrop-filter: blur(5px);
   transition: all 1s ease;
-  padding: .5rem;
+  padding: .5rem 1rem;
 }
 
 @media screen and (max-width: 1024px) {
